[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Graphics/Sprites/FinalFlag/final_flag.png" type="Texture" id=1]
[ext_resource path="res://Assets/Graphics/Sprites/FinalFlag/flag.png" type="Texture" id=2]
[ext_resource path="res://Objects/FinalFlag/FinalFlag.gd" type="Script" id=3]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 47 )

[sub_resource type="Animation" id=2]
resource_name = "raise_flag"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Flag:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1.6 ),
"transitions": PoolRealArray( 0.329877, 1 ),
"update": 0,
"values": [ Vector2( 14, -22 ), Vector2( 14, -124 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14, 7 )

[node name="FinalFlag" type="Area2D"]
script = ExtResource( 3 )

[node name="Stick" type="Sprite" parent="."]
position = Vector2( 0, -76 )
texture = ExtResource( 1 )

[node name="Flag" type="Sprite" parent="."]
position = Vector2( 14, -22 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -67 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/raise_flag = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -3 )
shape = SubResource( 3 )
[connection signal="raise_flag" from="." to="." method="_on_FinalFlag_raise_flag"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
